--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-import streamlit as st 
-import pandas as pd
-import plotly.express as px
+streamlit==0.90
+numpy==1.21.2
+pandas==1.3.3
+plotly==5.3.1
